# django-ninja-api-books

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
config/: env.py  settings.py  urls.py
src/books/: api.py  schemas.py
